<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_add_req">Add New Request</string>
    <string name="btn_view_reqs">View All Requests</string>
    <string name="name">Fullname</string>
    <string name="requestPurpose">Type Of Request</string>
    <string name="BloodType" >Blood Type</string>
    <string name="Description" >Request Description</string>
    <string name="delete">Delete</string>
    <string name="save">Save Changes</string>
    <string name="action_settings">action settings</string>
    <string name="hint_reqtype">eg: need blood </string>
    <string name="action_blood">eg : A , B ..</string>
    
    
</resources>